# --
# Changes of OTRS
# Copyright (C) 2001-2005 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.222 2005-12-21 19:37:06 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS head
 - (2005/12/21) added column type check in xml database defination
 - (2005/12/20) added unit test system
 - (2005/12/17) improved admin view of session management
 - (2005/12/04) moved FAQ from framework to own application module
    (can be installed over opm online repository now)
 - (2005/11/27) moved otrs archive directory for download and in RPMs
    from otrs to otrs-x.x.x
 - (2005/11/20) added multi pre application module support, just
    define it like:
    $Self->{PreApplicationModule}->{AgentInfo} = 'Kernel::Modules::AgentInfo';

2.0.5 (2005/??/??)
 - (2005/12/21) fixed missing delete on time_accounting in
    Kernel/System/Ticket/Article.pm if article got deleted
 - (2005/12/20) improved die if xml is invalid in Kernel/System/XML.pm
 - (2005/12/12) added compat config option for compose answer to
    replace original sender with current customers email address
 - (2005/11/19) updated French language file, thanks to Yann Richard
 - (2005/12/04) fixed bug #1025 - ORA-01400: cannot insert NULL into ("OTRS"
    ."CUSTOMER_USER"."COMMENTS"
 - (2005/12/04) fixed bug #1018 - initial_insert.sql, oracle error ORA-01400:
    cannot insert NULL into
 - (2005/12/03) fixed std attachment feature (no attachment after
    additional fiel upload) in agent ticket compose
 - (2005/12/01) improved database Quote() for integer, also allow +|-
    in integer
 - (2005/11/30) fixed order of create attributes (TicketCreate(), TicketFreeTime(),
    TicketFreeTime(), ArticleCreate(), ...) on customer ticket creation
 - (2005/11/29) fixed bug #1010 - ORA-00972 Identifier is too long for oracle